
[project]
name = "comfyui-filename-tools"
version = "1.0.6"
description = "A utility node for extracting and trimming filenames from file paths and uploaded pictures"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/skycoder182/comfyui-filename-tools"

[tool.comfy]
PublisherId = "skycoder"
DisplayName = "Filename Tools"
Icon = "https://raw.githubusercontent.com/skycoder182/comfyui-filename-tools/main/icon.png"
